# dagster-crypto-data-extraction

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  pyproject.toml  test_imports.py  test_s3_integration.py
app/: __init__.py  assets.py  definitions.py  factories.py  resources.py
app/config/: __init__.py  assets.py  settings.py
app/database/: __init__.py  connection.py  models.py  parameter_manager.py  schemas.py
app/extractors/: __init__.py  base.py  base_enhanced.py  binance.py  bybit.py  gateio.py
app/utils/: __init__.py  logger.py  retry.py  s3_metadata.py
docs/: architecture.md  deployment.md  dlt-dagster-integration.md  usage.md
source/: conf.py  index.rst
tests/: __init__.py  conftest.py
tests/integration/: test_dagster_assets.py
tests/unit/: test_config.py  test_database.py  test_extractors.py  test_resources.py  test_schemas.py  test_utils.py
