[project]
name = "dagster-crypto-data-extraction"
version = "0.1.0"
description = "Professional Dagster pipeline for extracting cryptocurrency data from multiple exchanges (Binance, Bybit, Gate.io) using dlt"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lior Gefen", email = "lior@gefen.tech" }]
license = { text = "MIT" }
keywords = [
  "dagster",
  "crypto",
  "data-engineering",
  "dlt",
  "etl",
  "binance",
  "bybit",
  "gateio",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  # Dagster core
  "dagster>=1.8.0",
  "dagster-webserver>=1.8.0",
  "dagster-postgres>=0.24.0",
  "dagster-duckdb>=0.24.0",

  # dlt (data load tool)
  "dlt[duckdb]>=1.2.0",
  "dlt[postgres]>=1.2.0",
  "dlt[s3]>=1.2.0",

  # AWS SDK
  "boto3>=1.34.0",

  # Database - Production
  "psycopg2-binary>=2.9.9",

  # Database - Development & ORM
  "sqlalchemy>=2.0.0",
  "duckdb>=1.1.0",

  # Crypto exchange clients
  "ccxt>=4.4.0", # Unified crypto exchange library

  # HTTP clients
  "requests>=2.32.0",
  "httpx>=0.28.0",

  # Configuration & Environment
  "python-dotenv>=1.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",

  # Utilities
  "tenacity>=9.0.0",   # Retry logic
  "structlog>=24.4.0", # Structured logging
]

[project.optional-dependencies]
dev = [
  # Linting & Formatting
  "ruff>=0.8.0",
  "black>=24.10.0",
  "isort>=5.13.0",

  # Type checking
  "mypy>=1.13.0",
  "pyright>=1.1.390",

  # Testing
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-asyncio>=0.24.0",
  "pytest-env>=1.1.0",
  "faker>=33.1.0",

  # Development tools
  "ipython>=8.30.0",
  "pre-commit>=4.0.0",
]

[tool.dagster]
module_name = "app.definitions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tests"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["ARG"] # Unused function arguments in tests

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = ["dagster.*", "dlt.*", "ccxt.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow running tests",
]
env = ["ENVIRONMENT=test"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
